kubernetes/apps/apps/ntfy/ntfy/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
spec:
  selector:
    matchLabels:
      app: ntfy
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: ntfy
        app: ntfy
    spec:
      containers:
      - name: ntfy
        image: harbor.cloud.traunseenet.com/docker.io/binwiederhier/ntfy:v2.29.0@sha256:4c599cf0818965782f93f652bd843e92714992e84d6b88ad17713dc0951cda1f
        args: ["serve"]
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: data
          mountPath: "/etc/ntfy"
      volumes:
        - name: data
          nfs:
            server: 10.0.0.154
            path: /mnt/nvmepool/kubernetes/ntfy
