kubernetes/apps/apps/ntfy/ntfy/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - ntfy.cloud.traunseenet.com
      secretName: ntfy-cert
  ingressClassName: traefik
  rules:
    - host: ntfy.cloud.traunseenet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ntfy
                port:
                  name: web
